<resources>
    <string name="app_name">Vacunacion</string>
    <string name="title_activity_menu_principal">Menu_Principal</string>
    <string name="title_info">Información</string>
    <string name="title_vacunas">Vacunas</string>
    <string name="title_noticias">Noticias</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>