<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_vacunas">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.clase.vacunacion.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.clase.vacunacion.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.clase.vacunacion.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.clase.vacunacion.ui.informacion.InformacionFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/navigation_vacunas"
        android:name="com.clase.vacunacion.ui.vacunas.VacunasFragment"
        android:label="@string/title_vacunas"
        tools:layout="@layout/fragment_vacunas" />

    <fragment
        android:id="@+id/navigation_noticias"
        android:name="com.clase.vacunacion.ui.noticias.NoticiasFragment"
        android:label="@string/title_noticias"
        tools:layout="@layout/fragment_noticias" />
</navigation>